// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row aligns items 1`] = `
<div
  className="itemsEnd row"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Row justifies content 1`] = `
<div
  className="justifyAround row"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Row renders 1`] = `
<div
  className="row"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Row renders with specified gap 1`] = `
<div
  className="row horizontalGap4"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;
